Prevent the JVM from failing with too many class files.